# interactiveOR

./: .gitignore  README.md
ImgSaliency/: ImgSaliency.sln  ImgSaliency.vcxproj  ImgSaliency.vcxproj.filters  ImgSaliencyMain.cpp  Run bat file.txt  Saliency.cpp  stdafx.h
ImgSaliency/HelpFunc/: CmFile.cpp  CmFile.h  CmLog.cpp  CmLog.h  CmTimer.cpp  CmTimer.h
ImgSaliency/Segmentation/: segment-image.cpp
audioFeature/: CMakeLists.txt
audioFeature/data/: map.sh  test.sh  trim.sh
audioFeature/script/: calkernel.py  convert.sh  histogram.sh  knn.py  map.sh  play.sh  test.sh
audioFeature/src/: CMakeLists.txt  addnoise.c  audiomap.c  audiosom.c  filter.c  filter.h  freqtest.c  gsltest.c  istfttest.c  phasetest.c  plotwave.c  sdenoisetest.c  som.c  som.h  som_denoise.c  som_denoise.h  somtest.c  specsubtest.c  spectral_sub.c  spectral_sub.h  spectrogram.c  stft.c  stft.h  stfttest.c  utils.c  utils.h
classify/: CMakeLists.txt  README
classify/cmake/Modules/: FindLibSVM.cmake
classify/scripts/: best_results.sh  evalres.m  extract_bow.sh  extract_bow_mfcc.sh  gen_report.sh  gen_table.sh  gen_tags.sh  late_fusion.py  plot_roc.sh  poslike_only.py  record.sh  run_hmm_test.sh
classify/src/: CMakeLists.txt  bimodal_test.c  classify.c  classify.h  classify_test.c  debug_utils.c  debug_utils.h  hello.c  hmm_test.c  seq_test.c  sequence.c  sequence.h  sequence_tag.c  sequence_tag.h  stab_test.c  svm_tag.c  svm_tag.h  svm_test.c  tag_test.c  tagged.c  tagged.h
data/: extract_bow.sh  extract_bow_mfcc.sh  extract_mfcc.sh  gen_tags.sh
data/old/scripts/: extract_stft.sh
data/results/: all_audio_hmm_n1k1  all_audio_hmm_n1k3  all_audio_hmm_n3k3  all_audio_hmm_n3k6  all_bimod_hmm_n1k1  all_bimod_hmm_n1k3  all_bimod_hmm_n3k3  all_bimod_hmm_n3k6  all_video_hmm_n1k1  all_video_hmm_n1k3  all_video_hmm_n3k3  all_video_hmm_n3k6  auc  knock_audio_hmm_n1k1  knock_audio_hmm_n1k3  knock_audio_hmm_n3k3  knock_audio_hmm_n3k6  knock_bimod_hmm_n1k1  knock_bimod_hmm_n1k3  knock_bimod_hmm_n3k3  knock_bimod_hmm_n3k6  knock_video_hmm_n1k1  knock_video_hmm_n1k3  knock_video_hmm_n3k3  knock_video_hmm_n3k6  table
data/scripts/: extract_mfcc.sh
saldet/: CMakeLists.txt
saldet/src/: CMakeLists.txt  saldet.cpp  saldet.h  segment-image.cpp  segment-image.h  tags
